--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div id="polo">
                     <p id="felirat">JÁNOSI</p>
                     <p id="sorszam">19</p>
+                    <img src="assets/images/polo-zold.png" id="kep">
                 </div>
             </div>
             <div class="col-md-5 offset-md-2 keret jobb">
