--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <div class="form-group">
                     <label>Válassz színt!</label>
                     <select class="form-control">
+                        <option value="">zöld</option>
+                        <option value="">kék</option>
+                        <option value="">narancs</option>
+                        <option value="">piros</option>
+                        <option value="">szürke</option>
                     </select>
                 </div>
                 <div class="form-group mt-5">
