--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <div class="col-md-5 offset-md-2 keret jobb">
                 <div class="form-group">
                     <label>Válassz színt!</label>
-                    <select class="form-control">
-                        <option value="">zöld</option>
-                        <option value="">kék</option>
-                        <option value="">narancs</option>
-                        <option value="">piros</option>
-                        <option value="">szürke</option>
+                    <select class="form-control" id="option" onchange="PoloSzin()">
+                        <option value="1">zöld</option>
+                        <option value="2">kék</option>
+                        <option value="3">narancs</option>
+                        <option value="4">piros</option>
+                        <option value="5">szürke</option>
                     </select>
                 </div>
                 <div class="form-group mt-5">
@@ -47,3 +47,5 @@
     </div>
 </body>
 </html>
+
+<script src="assets/js/main.js"></script>
