--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group mt-5">
                     <label>Felirat</label>
-                    <input type="text" class="form-control" value="JÁNOSI">
+                    <input type="text" class="form-control" onkeydown="PoloFelirat()" id="feliratszov" value="JÁNOSI">
                 </div>
                 <div class="form-group mt-5">
                     <label>Szám</label>
