--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="form-group mt-5">
                     <label>Szám</label>
-                    <input type="number"class="form-control" value="19">
+                    <input type="number"class="form-control" value="19" min="1" max="99">
                 </div>
             </div>
         </div>
